# project-equinox

./: .cdsapirc  .gitignore  README.md  clear_cache.py  download_era5.py  extract_ufir_geojson.ipynb  pyproject.toml  setup.cfg
data/graph/: LEMD_EGLL_2023_04_01.gml  LEMD_EGLL_2023_04_01_charges.npy  LEMD_EGLL_2023_04_01_distances.npy
data/ufir/: charges.csv  eurofirs.csv  fir_charges.csv
data/wp/: airac_2502.gml
notebooks/: route_graph.ipynb
notes/: era5.md  value_iteration.md  value_iteration_bw.md  vnav.md  wind_model.md
src/equinox/: vnav_performance.py  vnav_profiles_rev1.py
src/equinox/cost/: cost_rev1.py  plf.py  plf_mono.py
src/equinox/dp/: forward_dp.py  forward_dp_adj.py  forward_dp_vec2.py
src/equinox/feateng/: airspace_charges.py  distance.py  laplace.py
src/equinox/helpers/: datetimeh.py  haversine.py
src/equinox/route/: backward_state.notpy  backward_state.py  batch_interpolator.py  fms.py  forward_state.py  get_wind.py  value_iteration.py  value_iteration_torch.py
src/equinox/vnav/: vnav_performance.py  vnav_profiles.notpy
src/equinox/wind/: wind_date.py  wind_free.py  wind_model.py
tests/: test_fms.py  test_state_prediction.py  test_vnav_performance.py  test_wind_model.py
