[metadata]
# Core information about your package
name = equinox
version = 0.1.0
authors = Thinh Hoang <dthoang@intuelle.com>
description = Equinox is the Python library for computing estimated time of arrival (ETA) for a given route, or for the whole route graph.
long_description = file: README.md
long_description_content_type = text/markdown  # Or text/x-rst, etc.
license = MIT  # Or another license like Apache-2.0, GPL-3.0-or-later, etc.
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha # Or 4 - Beta, 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Libraries :: Python Modules

[options]
# Defines how setuptools should find and install your package's modules
package_dir =
    = src
packages = find:  # Automatically finds all packages under package_dir (src/)
# Minimum Python version required
python_requires = >=3.8

# Optional: Specify where to find packages if not using auto-discovery with 'find:' (see above)
# packages =
#     my_package
#     my_package.subfolder

[options.packages.find]
where = src  # Specifies the directory to search for packages
exclude =  # Optional: list of packages to exclude
    tests* # Example: exclude tests directories

# Example for GUI scripts:
# gui_scripts =
#    my-gui-app = my_package.gui:start_app

[options.package_data]
# Include non-Python files within your package (e.g., templates, data files)
# * = *.txt, *.json  # Includes all .txt and .json files in every package
# my_package = data/*.csv # Includes .csv files from my_package/data/

[options.data_files]
# For installing data files outside the package (e.g., configuration files in /etc)
# This is less common for libraries and more for applications. Use with caution.
# etc/my_package =
#    config/default.conf

# [flake8]
# # Configuration for the flake8 linter (often included in setup.cfg for convenience)
# max-line-length = 88
# extend-ignore = E203